more styling changes for main page

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -10,9 +10,15 @@
     <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
   <meta content="https://www.webentations.com" property="og:url" />
     <meta content="https://www.webentations.com/img/logo.png" property="og:image" />
-    <link rel="shortcut icon" id="favicon" href="img/favicon.png">
+    <link rel="shortcut icon" id="favicon" href="img/favicon.ico">
     <meta name="author" content="WEBENTATIONS inc.">
     <link rel="canonical" href="https://www.webentations.com" />
+	
+	<!-- Facebook specific tags -->
+	<meta property="og:image" content="img/Prezera_Logo.png" />
+	<meta property="og:title" content="Prezera - main page" />
+	<meta property="og:site_name" content="Prezera - live online presentations"/>
+	<meta property="og:description" content="PREZERA.COM™ enables you to present from inside your browser to a remote and in-house audiences. It comes with an iPhone remote control app. PREZERA.COM™ adds a social component inside your presentation allowing audience to connect with each other and presenter. Desktop sharing and video broadcasting make your presentation efficient. PREZERA.COM™ is the best and the simpliest way in the world to explain information from one person to many." />
 
     <!-- Bootstrap Core CSS -->
     <link href="new_template/css/bootstrap.min.css" rel="stylesheet">
@@ -227,7 +233,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About our company</h2><br>
-                    <p>PREZERA.COM™ is a company based in Mountain View - a city in the heart of Silicon Valley, California. It took 2 PhDs and 75 years of experience to design and make the most efficient to tool for presentations up to date. Our goal is to make your life easier, make presentations less boring and more fun (while increasing your productivity). We embrace latest, coolest technologies and let you use them in our product while making sure your 80 year grandmother is able to use our product too. Have fun with PREZERA.COM™, and if you have any questions before, during or after your presentation, email us at help@prezera.com, and we'll be there for you.</p><br>
+                    <p>PREZERA.COM™ is a company based in Mountain View - a city in the heart of Silicon Valley, California.<br>It took 2 PhDs and 75 years of experience to design and make the most efficient tool for presentations up to date.<br>Our goal is to make your life easier, make presentations less boring and more fun (while increasing your productivity).<br>We embrace latest, coolest technologies and let you use them in our product while making sure your 80 year grandmother is able to use our product too.<br>Have fun with PREZERA.COM™, and if you have any questions before, during or after your presentation, email us at help@prezera.com, and we'll be there for you.</p><br>
                 </div>
             </div>
         </div>
@@ -312,12 +318,12 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="https://twitter.com/prezera"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="https://www.facebook.com/prezera"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
-                        <li>
+                        <!--<li>
                             <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
                         </li>
                         <li>
@@ -326,8 +332,8 @@
                         <li>
                             <a href="#"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
-                        <li>
-                            <a href="#"><i class="fa fa-envelope fa-fw fa-3x"></i></a>
+                        <li>-->
+                            <a href="mailto:info@prezera.com"><i class="fa fa-envelope fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
