--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -52,7 +52,7 @@
 <body> <!--onresize="resizeCanvas()">-->
 
 <div id="recStarted" style="position: absolute;  top: -10px; left: -10px; display: none; z-index: 2;">
-<img id="recordButton" src="/img/matrox-record-icon.jpg" width="50" height="60">
+<img id="recordButton" src="/img/matrox-record-icon.jpg" width="50" height="60" alt="Stop recording" title="Stop recording">
 </div>
 
 	<!--<img src="../img/RightCurtain.png" id="rightCurtain" class="curtain" />
