Removed socket.js from FE

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="../css/videochat/videochat-style.css">
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
     <link class="rs-file" href="../css/royalslider.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../css/index1.css">
+	<!--<link rel="stylesheet" type="text/css" href="../css/index1.css">-->
     <!-- preview-related stylesheets -->
     <link href="../css/reset.css" rel="stylesheet">
     <link href="../css/github.css" rel="stylesheet">
