Moved webrtc to local

--- a/AWS_Website/www_static/A1/webrtc/record.html
+++ b/AWS_Website/www_static/A1/webrtc/record.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<script src="/A1/js/RTCMultiConnection.js"></script>
-<script src="/A1/js/RecordRTC.js"></script>
+<script src="/A1/js/webrtc/RTCMultiConnection.js"></script>
+<script src="/A1/js/webrtc/firebase.js"></script>
+<script src="/A1/js/webrtc/RecordRTC.js"></script>
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <style>
