--- a/AWS_Website/www_static/A1/webrtc/sharing-client.html
+++ b/AWS_Website/www_static/A1/webrtc/sharing-client.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<script src="/A1/js/RTCMultiConnection.js"></script>
+<script src="/A1/js/webrtc/RTCMultiConnection.js"></script>
+<script src="/A1/js/webrtc/firebase.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <style>
 audio {
