--- a/AWS_Website/www_static/A1/webrtc/video-client.html
+++ b/AWS_Website/www_static/A1/webrtc/video-client.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<script src="/A1/js/RTCMultiConnection.js"></script>
+<script src="/A1/js/webrtc/RTCMultiConnection.js"></script>
+<script src="/A1/js/webrtc/firebase.js"></script>
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <style>
@@ -53,9 +54,23 @@ socketWebrtc.on('sharing-client', function (data) {
 			if(event.isVideo) {
 				if(event.type == "local") {
 					$( "#videosharing" ).append(event.mediaElement);
+					if(navigator.userAgent.indexOf("Firefox") != -1 )  {
+						$("#" + event.streamid).hide();
+						setTimeout(function(){
+							event.mediaElement.play();
+							$("#" + event.streamid).show();
+						}, 1000);
+					}
 				}
 				else if(event.type == "remote") {
 					$( "#videosharingR" ).append(event.mediaElement);
+					if(navigator.userAgent.indexOf("Firefox") != -1 )  {
+						$("#" + event.streamid).hide();
+						setTimeout(function(){
+							event.mediaElement.play();
+							$("#" + event.streamid).show();
+						}, 1000);
+					}
 				}
 			}
 			if (event.isAudio) {
