--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -34,7 +34,6 @@
     <link rel="stylesheet" href="../css/videochat/videochat-style.css">
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
     <link class="rs-file" href="../css/royalslider.css" rel="stylesheet">
-	<!--<link rel="stylesheet" type="text/css" href="../css/index1.css">-->
     <!-- preview-related stylesheets -->
     <link href="../css/reset.css" rel="stylesheet">
     <link href="../css/github.css" rel="stylesheet">
@@ -51,7 +50,7 @@
 
 <body> <!--onresize="resizeCanvas()">-->
 
-<div id="recStarted" style="position: absolute;  top: -10px; left: -10px; display: none; z-index: 2;">
+<div id="recStarted">
 <img id="recordButton" src="/img/matrox-record-icon.jpg" width="50" height="60" alt="Stop recording" title="Stop recording">
 </div>
 
