Video add stream fix

--- a/AWS_Website/www_static/A1/webrtc/video-client.html
+++ b/AWS_Website/www_static/A1/webrtc/video-client.html
@@ -86,9 +86,9 @@ function start() {
 }
 
 function addStream() {
-	participants.removeStream({
+	/*participants.removeStream({
 		oneway: true
-	});
+	});*/
 
 	participants.addStream({
 		video: true,
