favicon, background on account.html, signin close from menu

--- a/AWS_Website/www_static/account.html
+++ b/AWS_Website/www_static/account.html
@@ -39,8 +39,11 @@
       <!-- font icons -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+<!-- Custom CSS -->
+	  <link href="new_template/css/stylish-portfolio.css" rel="stylesheet">
+	
     </head>
-    <body>
+    <body class='mainbackground'>
         <section class="middle">
             <div class="container-fluid">
                     <h1>My account</h1>
