--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -365,7 +365,7 @@
     });
 	
 	// Click on item in menu
-	$(".menuLink").click(function(e) {
+	$(".menuLink,.signUpUser,.loginUser").click(function(e) {
         e.preventDefault();
         $("#sidebar-wrapper").toggleClass("active");
     });
