Pages links fixes

--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -59,7 +59,7 @@
         <header id="header">
           <nav id="nav">
               <ul id="navigation" class="clearfix">
-                <li><a href="https://www.prezera.com" class='menuLink' id='menuAbout'>Home</a></li>
+                <li><a href="/" class='menuLink' id='menuAbout'>Home</a></li>
                 <% if (!user) { %>
 				<li><a href="/subscription.html" data-index="three" class="menuLinkNoScrollRed">Upgrade account</a></li>
                 <% } else { %>
