--- a/AWS_Website/www_static/subscription.html
+++ b/AWS_Website/www_static/subscription.html
@@ -80,7 +80,7 @@
 						<td>Silver<br>
 						The same as our Basic plan + you can get your own domain on PREZERA, example: john.prezera.com<br>
 						Plus you would able to get custom names for your presentation for free! Example: john.prezera.com/MyPresentation<br>
-						5$/year<br>
+						4.99$/year<br>
 						<% if (!user) { %>
 							<input type="button" value="Register" class="btn btn-default"/ onclick="location='/signup.html?account=silver'">
 						<% } else { %>
@@ -106,7 +106,7 @@
 						<tr>
 						<td>Gold<br>
 						The same as our Silver plan + unlimited presentations + 100mb of space<br>
-						10$/year<br>
+						9.99$/year<br>
 						<% if (!user) { %>
 							<input type="button" value="Register" class="btn btn-default"/ onclick="location='/signup.html?account=gold'">
 						<% } else { %>
@@ -152,7 +152,7 @@
         <header id="header">
           <nav id="nav">
               <ul id="navigation" class="clearfix">
-                <li><a href="https://www.prezera.com" class='menuLink' id='menuAbout'>Home</a></li>
+                <li><a href="/" class='menuLink' id='menuAbout'>Home</a></li>
                 <li><a href="/my.html" data-index="three" class="">My presentations</a></li>
                 <% if (!user) { %>
                 <% } else { %>
