--- a/AWS_Website/www_static/fake_slide.html
+++ b/AWS_Website/www_static/fake_slide.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title><%=title %></title>
-    <meta name="title" content="><%=title %> :: Live online presentations" />
+    <meta name="title" content="<%=title %> :: Live online presentations" />
     <meta name="description" content="Free online web presentations. Social chat, video presentation, personal presentation notes, password protection and much more." />
     <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
 </head>
