--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -263,7 +263,7 @@
 	<div class="navButton navButtonNext" id="navNext">&#x203a;</div>
 
     <!--<script class="rs-file" src="../js/jquery.royalslider.min.js"></script>-->
-    <<script class="rs-file" src="../js/jquery.royalslider.js"></script>
+    <script class="rs-file" src="../js/jquery.royalslider.js"></script>
     <script src="../js/jquery.infinitescroll.js"></script>
 
     <!-- VideoChat Javascript -->
