Mobile orientation check

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -141,6 +141,10 @@
 		<iframe src="../A1/help.html" style='width:100%;height:100%'></iframe>
 	</div>
 
+	<div class='orientationOverlay' id='orientationOverlay'>
+		<div class="centerText"><font color="white">If you want to use mobile version you should rotate your device to landscape mode.</font></div>
+	</div>
+
 	<div class='renamePresentationOverlay' id='renamePresentationOverlay'>
 		<div class="closevideo" id="closeRenamePresentationOverlay" style='margin-right:30px;'></div>
 		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" id="paypalNewHashForm">
