--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -123,7 +123,7 @@
         </video>-->
 
 
-        <div class="text-vertical-center">
+        <div>
             <% if(noUploadForUser == 0) { %>
                 <div class="uploadfile">
                     <button type="file" class="btn btn-dark btn-lg"  accept="pptx">Upload Presentation</button>
@@ -245,21 +245,18 @@
     <section id="login2" class="login mainbackground">
         <div class="title col-xs-12"><h1>PRE<span style='color:red'>Z</span>ERA</h1></div>
 
-        <div class="loginbody col-xs-offset-4 col-xs-4">
-
-                <form class="m-form-signin" role="form" id="signinform" action="/signin.html" method="post">
+        <div class="loginbody">
+                <form id="signinform" action="/signin.html" method="post">
                 <input type="hidden" name="redirect" value="<%= request.headers.referer %>">
-                    <br>
                     <h1>Sign In</h1>
                     <div class="form-group">
                         <label for="Username">Email</label>
                         <input type="email" class="form-control" name="email" placeholder="Enter email" value="<%= request.body.email %>">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label> <!--a href="#">(forgot password)</a-->
+                        <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" name="password" placeholder="Password">
-                    </div> <!-- <input type="checkbox"> -->
-
+                    </div>
                     <input type="submit" value="Sign In" class="btn btn-default"/>
                 </form>
             </div>
@@ -268,10 +265,9 @@
     <!-- Sign Up -->
     <section id="signUp" class="login mainbackground">
         <div class="title col-xs-12"><h1>PRE<span style='color:red'>Z</span>ERA</h1></div>
-        <div class="loginbody col-xs-offset-4 col-xs-4">
 
-               <div class="container-fluid">
-                <form class="m-form-signin" role="form" action="/signup.html" method="post">
+        <div class="loginbody">
+                <form role="form" action="/signup.html" method="post">
                 <input type="hidden" name="redirect" value="<%= request.headers.referer %>">
                 <input type="hidden" name="account" value="<%= (request.body.account) ? request.body.account : request.query.account %>">
                     <h1>Create account </h1>
