Logo size fixes for mobile version

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -111,7 +111,7 @@
 
         <div class="title col-xs-12" style="position: absolute; top: 20%;">
 			<center>
-				<div style="font-size: 150px; color: #000061">
+				<div style="font-size: 12vw; color: #000061">
 					PRE<span style='color:red'>Z</span>ERA
 				</div>
 			</center>
