--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -111,7 +111,7 @@
 
         <div class="title col-xs-12" style="position: absolute; top: 20%;">
 			<center>
-				<div style="font-size: 12vw; color: #000061">
+				<div style="font-size: 10vw; color: #000061">
 					PRE<span style='color:red'>Z</span>ERA
 				</div>
 			</center>
@@ -123,7 +123,7 @@
         </video>-->
 
 
-        <div>
+        <div class="text-vertical-center">
             <% if(noUploadForUser == 0) { %>
                 <div class="uploadfile">
                     <button type="file" class="btn btn-dark btn-lg"  accept="pptx">Upload Presentation</button>
