Link to my presentations fixed

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -69,7 +69,7 @@
 
 				<% if (noUploadForUser != 2) { %>
                 <li><a href="/subscription.html" data-index="three" class="menuLinkNoScrollRed">Upgrade account</a></li>
-                <li><a href="#my" class="menuLinkNoScroll">My presentations</a></li>
+                <li><a href="/my.html" class="menuLinkNoScroll">My presentations</a></li>
 				<li><a href="#login" class="loginUser">Sign in</a></li>
                 <li><a href="#signUp" class="signUpUser">Sign up</a></li>
 				<% } %>
