Echo effect disabled for video + screensharing

--- a/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
+++ b/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
@@ -23,6 +23,14 @@ var MODERATOR_SESSION    = {         // media-type
 	audio: true,
 	screen: true
 };
+
+// Switch off audio if video is running
+if(parent.window.isVideoChatOn == 1) {
+	MODERATOR_SESSION    = {
+		screen: true
+	};
+}
+
 var MODERATOR_EXTRA      = {};       // empty extra-data
 
 var moderator     = new RTCMultiConnection(MODERATOR_CHANNEL_ID);
