Login & SignUp pages moved to index

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -251,7 +251,7 @@
 				  <li><a href="javascript:downloadPresentation()" id="downloadPresentation">Download Presentation</a></li>
 				  <!--<li><a href="javascript:showHideInsertVideoSlideOverlay()" id="menuInsertVideoSlide">Insert Video Slide</a></li>-->
 				  <li><a href="javascript:showHidePasswordCreateOverlay()" id="menuPassword">Protect With Password</a></li>
-				  <li><a href="../my.html" id="shareTwitter">My Presentations</a></li>
+				  <li><a href="/#myPres" id="shareTwitter">My Presentations</a></li>
 				  <li><a href="/">Home</a></li>
 				  <li><a href="javascript:showHideRenamePresentationOverlay()" id="menuRenamePresentation">Rename ($Payed)</a></li>
 				  <li><a href="javascript:openContactUs()" id="menuContactUs">Contact Us / Suggest / Ask</a></li>
